<resources>
    <string name="app_name">Races SQLite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="other_options_title_menu">Aukera gehiago</string>
    <string name="action_settings">Settings</string>

    <!--activity_login-->

    <string name="start_session_mendiak">Hasi saioa</string>

    <!--Activity Mountains details-->

    <string name="mendizerra">mendikatea</string>
    <string name="splash_text">"Han goitik itsasoa ikusten da"</string>
    <string name="upload_image_button_lbl">Igo irudia</string>
    <string name="i_climb_mountain">Igo dut!</string>
    <string name="i_iruzkina_mountain">Idatzi iruzkina</string>
    <string name="download_data_progress">"Datuak bidaltzen..."</string>
    <string name="image_no_take_correctly">Irudia ez da zuzen hartu, saiatu gehitzen berriro mesedez.</string>
    <string name="image_upload_successfully">"Irudia zuzen igo da. Eskerrik asko!"</string>
    <string name="image_upload_no_correct">"Irudia oker igo da. Saiatu berriro mesedez."</string>
    <string name="no_granted_access">Ez da eskatutako baimena eman.</string>
    <string name="data_correct_send">Datuak zuzen bidalita!</string>
    <string name="data_no_correct_send">Datuak ez dira zuzen bidali, saiatu berriro!</string>

    <!-- Camera / Directory and Dialogs texts options-->
    <string name="title_select_option_image">"Aukeratu irudia kamera edo gailutik"</string>
    <string name="camera_label">Argazki kamera</string>
    <string name="device_label">Gailuko irudiak</string>
    <string name="send_label">Bidali</string>
    <string name="cancel_label">Ezeztatu</string>

    <!--Navigation menu strings-->
    <string name="title_info_app">Info</string>
    <string name="title_config_app">Ezarpenak</string>
    <string name="title_share_app">Elkarbanatu</string>
    <string name="title_mapa_app">Mapa</string>
    <string name="title_eh_mendi_app">Mendiak</string>
    <string name="title_my_mendi_app">Nire Mendiak</string>
    <string name="title_activity_mendiak_maps">EH-ko mendien mapa</string>
    <string name="title_activity_ranking">Rankinak</string>
    <string name="title_activity_my_user_stats">Nire Estatistikak</string>
    <string name="title_search_app">Bilatu zerrendan</string>
    <string name="title_activity_info">Informazioa</string>

    <!--Google Analytics Text to register TrackView-->
    <string name="ga_login_btn_click">(KLIK) Saioa hasi botoia</string>
    <string name="ga_search_action_bar_click">(KLIK) Mendiak Filtratu Bilatzailearekin</string>
    <string name="ga_filt_mnu_action_bar_click">(KLIK) Filtroa aplikatzeko aukera</string>
    <string name="ga_filt_by_altitude_mnu_action_bar_click">(KLIK) Ordenatu altueraren arabera</string>
    <string name="ga_filt_by_importance_mnu_action_bar_click">(KLIK) Ordenatu garrantziaren arabera</string>
    <string name="ga_share_general_mnu_action_bar_click">(KLIK) Partekatu orokorra</string>
    <string name="ga_share_select_item_mnu_action_bar_click">(KLIK) Parekatu: </string>
    <string name="ga_igo_dut_btn_click">(KLIK) Igo dut mendia: </string>
    <string name="ga_igo_irudia_btn_click">(KLIK) Igo irudia: </string>
    <string name="ga_igo_irudia_kamera_btn_click">(KLIK) Igo irudia (Kamera): </string>
    <string name="ga_igo_irudia_galeria_btn_click">(KLIK) Igo irudia (Galeria): </string>
    <string name="ga_igo_irudia_cancel_btn_click">(KLIK) Igo irudia (Ezeztatu): </string>
    <string name="ga_share_navigation_mnu_btn_click">(KLIK) Partekatu orokorra </string>
    <string name="ga_more_info_navigation_mnu_btn_click">(KLIK) Informazio gehiago erakusteko </string>
    <string name="ga_config_navigation_mnu_btn_click">(KLIK) Aplikazioaren ezarpenak (Konfigurazioa) </string>


    <string name="ga_start_app_activity">(Activity) Aplikazioaren hasiera: </string>
    <string name="ga_mountain_details_activity">(Activity) Aukeratutako mendiaren xehetasunak: </string>
    <string name="ga_all_mountains_activity">(Activity) Mendi zerrenda osoa</string>
    <string name="ga_my_stats_activity">(Activity) Nire estatistikak</string>
    <string name="ga_ranking_activity">(Activity) Ranking orokorrak</string>
    <string name="ga_maps_activity">(Activity) Ranking orokorrak</string>
    <string name="ga_my_climbs_activity">(Activity) Nire mendiak</string>
    <string name="ga_general_info_activity">(Activity) Informazion orokorra</string>

    <!--Menus strings-->

    <string name="order_by_altitude_str">Altueran ordenatu</string>
    <string name="order_by_value_str">Puntuazioan ordenatu</string>
    <string name="order_by_distantzia_str">Distantzian ordenatu</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
